<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="3dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/que_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/Que_3" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/que_3">

                <RadioButton
                    android:id="@+id/RadioButton_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/extremely_well" />

                <RadioButton
                    android:id="@+id/RadioButton_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RadioButton_1"
                    android:checked="false"
                    android:text="@string/very_well"/>

                <RadioButton
                    android:id="@+id/RadioButton_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RadioButton_2"
                    android:checked="false"
                    android:text="@string/somewhat_well" />

                <RadioButton
                    android:id="@+id/RadioButton_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RadioButton_3"
                    android:checked="false"
                    android:text="@string/not_so_well" />

                <RadioButton
                    android:id="@+id/RadioButton_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RadioButton_4"
                    android:checked="false"
                    android:text="@string/not_at_all_well" />
            </RadioGroup>

            <Button
                android:id="@+id/Next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_margin="20dp"
                android:onClick="jumpToNextPage"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/radioGroup"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
